@@ -234,8 +234,9 @@ How to define a query is described in documentation for npg_qc::autoqc::qc_store
 sub load_from_staging {
     my ($self, $query) = @_;
 
-    if (!defined $query) { croak q[Query object should be defined]; }
-    #carp 'QUERY ' . $query->to_string;
+    if (!defined $query) {
+      croak q[Query object should be defined];
+    }
 
     my $finder_hash = {id_run => $query->id_run,};
     if ($query->propagate_npg_tracking_schema) {
@@ -363,7 +364,7 @@ sub slice {
 
     foreach my $r (@{$self->results}) {
         if ($r->$criterion && $r->$criterion eq $value) {
-            c->add($r);
+            $c->add($r);
         }
     }
     return $c;
@@ -467,12 +468,18 @@ whether this lane has plex-level results.
 sub run_lane_plex_flags {
     my $self = shift;
     my $map = $self->run_lane_collections;
+
     my $flags = {};
-    foreach my $rpt_key (keys @{%map}) {
+    foreach my $rpt_key (keys %{$map}) {
         my $rpt_h = npg_qc::autoqc::role::rpt_key->inflate_rpt_key($rpt_key);
-        if (!defined $rpt_h) { #it's a lane
-            my $has_plexes = any { $_ eq 'tag metrics' } @{$map->{$rpt_key}->check_names()};
-            $flags->{$rpt_key} = $has_plexes ? 1 : 0;
+        if (!defined $rpt_h->{'tag_index'}) { # it's a lane-level entry
+            if (!exists $flags->{$rpt_key}) {
+                my $has_plexes = any { $_ eq 'tag metrics' } @{$map->{$rpt_key}->check_names()->{'list'}};
+                $flags->{$rpt_key} = $has_plexes ? 1 : 0;
+            }
+        } else { # it's a plex-level entry
+            my $lane_key = npg_qc::autoqc::role::rpt_key->lane_rpt_key_from_key($rpt_key);
+            $flags->{$lane_key} = 1;
         }
     }
     return $flags;
@@ -526,7 +533,7 @@ sub check_names {
             $map->{$name} = $check;
         }
     }
-    return {list => \@check_names, map => $map,};
+    return {'list' => \@check_names, 'map' => $map,};
 }
 
 
