@@ -1,5 +1,14 @@
 LIST OF CHANGES FOR NPG-QC PACKAGE
 
+ - autoqc results collection class - add a method for inferring whether
+     a lane has plexes from results themselves
+ - SeqQC - steps towards making display of autoqc results and manual qc process
+   independent of availability of warehouse data:
+    - use the new collection method to decide whether to display a link to
+       plex results (previously warehouse data were used for this)
+    - if plex results are available, always display a link to them
+ - SeqQC - remove vestigial code for batch id retrieval 
+
 release 57.8.1
  - add temporary file name option to bamtofastq command
 
